overflow-y: auto; background-attachment: fixed;

--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
     overflow: hidden;
     margin: 0 auto;
     height: 100vh;
+    overflow-y: auto;
+    background-attachment: fixed;
 }
 
 button {
